<resources>
    <string name="app_name">Xinxiaoshu</string>
    <string name="hint_device_not_rooted">设备未root</string>
    <string name="action_back">后退</string>
    <string name="action_login">登录</string>
    <string name="hint_slogan">心书 · 小编</string>
    <string name="login_announce">登录即代表您已阅读并同意</string>
    <string name="login_contract">小编最终用户协议</string>
    <string name="hint_input_phone">请输入申请时的手机号</string>
    <string name="hint_input_authcode">请输入验证码</string>
    <string name="action_get_authcode">获取验证码</string>
    <string name="activity_reception">接单模式</string>
    <string name="action_reception_on">在线接单中</string>
    <string name="action_reception_off">休息中</string>
    <string name="action_tutorial">阅读小编教程</string>
    <string name="action_turn_on_reception">上线接单</string>
    <string name="state_reception_off">你目前是下线状态无法接单</string>
    <string name="item_history_customer">历史客户（人）</string>
    <string name="item_withdraw">已提现（元）</string>
    <string name="hint_upload_data">选择要上传的数据</string>
    <string name="action_clear_all">清除全部</string>
    <string name="hint_search_history">搜索客户</string>
    <string name="action_copylink">复制链接</string>
    <string name="action_remind_to_order">提醒下单</string>
    <string name="item_history_withdraw">累计提现（元）</string>
    <string name="action_loading">正在努力初始化中…</string>
    <string name="activity_friends">朋友圈</string>
    <string name="hint_nomore">------ 已经没有了 ------</string>
    <string name="action_launcher">进入</string>
    <string name="hint_make_root_dir_failed">创建根目录失败</string>
    <string name="hint_move_apk_failed">未找到或不能移动微信apk</string>
    <string name="hint_ayscn_db_failed">同步微信数据库失败</string>
    <string name="hint_init_succeed">初始化成功</string>
    <string name="hint_nomore_friend">………………所有好友都在了………………</string>
    <string name="activity_login">登录</string>
    <string name="activity_upload">上传数据</string>
    <string name="action_upload">上传</string>
    <string name="action_upload_succeed">完成</string>
    <string name="action_upload_resume">继续</string>
    <string name="action_upload_ing">上传中</string>
    <string name="hint_permissions_denied">申请系统权限被拒绝,请到应用信息中手动设置</string>
    <string name="hint_app_init">初始化中…</string>
    <string name="hint_online_extras">节假日前，下单客户更多哦</string>
    <string name="hint_online_waiting">等待派单</string>
    <string name="activity_history">历史客户</string>
    <string name="activity_withdraw">历史提现</string>
    <string name="activity_tutorial">小编教程</string>
    <string name="hint_reception_succeed">等待客户添加</string>
    <string name="hint_reception_failed">下次再抢快一点哦</string>
    <string name="hint_reception_request">请求排版</string>
    <string name="action_reception_turn_off">下线休息</string>
    <string name="action_reception_get">抢单</string>
    <string name="action_reception_succeed">成功</string>
    <string name="action_reception_failed">已结束</string>
    <string name="notification_title">心书小编正在运行中</string>


    <string name="hint_default_empty_list">这里好像什么都没有</string>
    <string name="hint_default_error_message">(ಥ_ಥ)出了点小问题,程序员正赶来抢救…</string>
    <string name="hint_loading_nomore">已经没有了</string>
    <string name="hint_loading_failed">加载失败</string>
    <string name="hint_phone_not_registered">手机号未注册</string>
    <string name="hint_phone_not_correct">手机号错误</string>
    <string name="fetch_data_title">正在拉取朋友圈…</string>
    <string name="fake_location">xx xx</string>
    <string name="hint_upload_ing">正在努力上传中…</string>
    <string name="hint_upload_cost_time">可能需要一点时间</string>
    <string name="action_cancel">取消</string>
    <string name="hint_upload_succeed">上传成功</string>
    <string name="action_confirm">确定</string>
    <string name="hint_upload_empty">没有新数据可以上传</string>

</resources>
